[build-system]
  requires = ['setuptools>=61.0.0']
  build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]
include = ["pytomofilt*"]

[project]
  name = "pytomofilt"
  version = "0.0.1-alpha.1"
  description = "Tomographic filtering in python"
  authors = [
    { name = "Justin Leung" },
    { name = "Andrew Walker"},
  ]
  license = { file = "LICENSE" }
  requires-python = ">=3.9, <3.13"
  readme = "README.md"
  classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
  ]
  dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pyshtools",
    "terratools",
    "cartopy",
    "pandas",
    "pyproj",
    "pillow",
    "requests",
    "platformdirs",
    "typer",
    "typing_extensions",
  ]

  [project.optional-dependencies]
    test = ["pytest", "pytest-cov"]
    docs = ["sphinx==7.1.2", "sphinx-rtd-theme==1.3.0rc1"]
    demo = ["matplotlib", "jupyterlab", "ipykernel"]

  [project.scripts]
  ptf_reparam_filter_files = "pytomofilt.cli:app"

[tool.pytest.ini_options]
pythonpath= [
  "."
]

